--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,8 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.19",
     "vite": "^5.4.8"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^4.0.1"
   }
 }
